--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,19 +1,25 @@
-<div class="box jobs-box">
-	<h1>Jobs listing</h1>
-	<%= link_to 'Add new job offer', new_job_path %>
-	<br/>
+<% content_for :page_location, "Jobs" %>
 
-	<%= paginate @jobs %>
-	
-	<ul class="jobs-list">
-		<% @jobs.each do |job| %>
-			<li class="job-item">
-				<a href="<%= job_path(job) %>">
-					<h4><%= job.title %></h4>
-					<p class="job-item-company"><span class="job-item-company-name"><%= job.company_name %></span> in <span class="job-item-location"><%= "#{job.city}, #{job.country}" %></span></p>
-					<span class="job-item-time">Posted on <i><%= job.created_at.to_formatted_s(:date) %></i> Valid until <i><%= job.valid_until.to_formatted_s(:date) %></i></span>
-				</a>
-			</li>
-		<% end %>
-	</ul>
+<div class="row">
+	<div class="col-sm-12 jobs-box">
+		<h2 class="hl top-zero">Jobs</h2>
+		<hr/>
+
+		<%= link_to 'Add new job offer', new_job_path %>
+		<br/>
+
+		<%= paginate @jobs %>
+		
+		<ul class="jobs-list">
+			<% @jobs.each do |job| %>
+				<li class="job-item">
+					<a href="<%= job_path(job) %>">
+						<h4><%= job.title %></h4>
+						<p class="job-item-company"><span class="job-item-company-name"><%= job.company_name %></span> in <span class="job-item-location"><%= "#{job.city}, #{job.country}" %></span></p>
+						<span class="job-item-time">Posted on <i><%= job.created_at.to_formatted_s(:date) %></i> Valid until <i><%= job.valid_until.to_formatted_s(:date) %></i></span>
+					</a>
+				</li>
+			<% end %>
+		</ul>
+	</div>
 </div>
