--- a/app/views/layouts/_chat.html.erb
+++ b/app/views/layouts/_chat.html.erb
@@ -1,4 +1,4 @@
-<div class="sidebar sidebar-left sidebar-chat" id="chatContainer" ng-controller="ChatController">
+<div class="sidebar sidebar-left sidebar-chat hidden" id="chatContainer" ng-controller="ChatController">
   <div class="search-box">
     <div class="chat-toggle">
         <a id="chat-toggle-link" href="" title="Toggle chat"><i class="glyphicon glyphicon-circle-arrow-left"></i></a>
