--- a/app/views/layouts/landingpage.html.erb
+++ b/app/views/layouts/landingpage.html.erb
@@ -44,7 +44,7 @@
     <div class="container">
       <div id="home-row-1" class="row clearfix">
         <div class="col-12">
-          <img class="img-logo" src="/assets/logo_big2.png" alt="Logo" title="Dent Group" />
+          <img class="img-logo" src="/assets/logo2.png" alt="Logo" title="Dent Group" />
           <h4 class="font-thin"><%= t('lp_subtitle_html') %></h4>
         </div><!-- /col-12 -->
       </div><!-- /row -->
