--- a/app/views/layouts/landingpage2.html.erb
+++ b/app/views/layouts/landingpage2.html.erb
@@ -62,7 +62,7 @@
           </div>
           <div class="navbar-header">
             <a class="navbar-brand scrollTo" href="#home">
-              <img src="/assets/logo1.png" alt="Logo" />
+              <img src="/assets/logo.png" alt="Logo" />
             </a>
           </div>
 
@@ -100,7 +100,7 @@
     <section id="about">
       <div class="container">
         <div class="row title-row">
-          <div class="col-12 font-thin"><%= image_tag('logo2.png', alt: "logo", title: "Dent Group", class: "logo") %> <span class="font-semibold">connects</span> you with your colleagues from <span class="font-semibold">everywhere around the world.</span></div>
+          <div class="col-12 font-thin"><%= image_tag('logo.png', alt: "logo", title: "Dent Group", class: "logo") %> <span class="font-semibold">connects</span> you with your colleagues from <span class="font-semibold">everywhere around the world.</span></div>
         </div>
         <div class="row line-row">
           <div class="hr">&nbsp;</div>
@@ -109,25 +109,56 @@
           <div class="col-12 font-thin">This is what <span class="font-semibold">we can offer you</span></div>
         </div>
         <div class="row content-row">
-          <div class="col-12 col-lg-3 col-sm-6">
+          <div class="tt ttconnect col-12 col-lg-3 col-sm-6" data-toggle="tooltip" data-placement="top" title="title">
             <p><i class="fa fa-globe"></i></p>
             <h2 class="font-semibold">Connect</h2>
-            <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+            <h4 class="font-thin">Dent Group pune bazele unei noi conexiuni intre medicii stomatologi din intreaga lume in deplina intimitate.</h4>
           </div>
-          <div class="col-12 col-lg-3 col-sm-6">
+          <div class="tt ttshare col-12 col-lg-3 col-sm-6" data-toggle="tooltip" data-placement="top" title="title">
             <p><i class="fa fa-share-square-o"></i></p>
             <h2 class="font-semibold">Share</h2>
-            <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+            <h4 class="font-thin">Aveti posibilitatea de a impartasi idei si opinii personale care pot fi citite si luate in considerare de ceilalti medici membrii utilizatori ai site-ului.</h4>
           </div>
-          <div class="col-12 col-lg-3 col-sm-6">
+          <div class="tt ttdiscuss col-12 col-lg-3 col-sm-6" data-toggle="tooltip" data-placement="top" title="title">
             <p><i class="fa fa-users"></i></p>
             <h2 class="font-semibold">Discuss</h2>
-            <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+            <h4 class="font-thin">Primul si singurul site online dedicat medicilor stomatologi care poate fi folosit pentru a comunica cat mai eficient.</h4>
           </div>
-          <div class="col-12 col-lg-3 col-sm-6">
+          <div class="tt ttmore col-12 col-lg-3 col-sm-6" data-toggle="tooltip" data-placement="top" title="title">
             <p><i class="fa fa-pencil-square-o"></i></p>
-            <h2 class="font-semibold">Something else</h2>
-            <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+            <h2 class="font-semibold">A lot more</h2>
+            <h4 class="font-thin">Utilizarea site-ului Dent Group este la indemana fiecarui medic stomatolog, si are ca obiectiv, stabilirea bazelor unui sistem relational pentru a imbunatati calitativ deciziile membrilor acestui grup online.</h4>
+          </div>
+
+          <div class="tts">
+            <div id="ttconnect">
+              <p><span class="red bold">Dent Group</span> pune bazele unei noi conexiuni avand ca scop asigurarea unei comunicari, organizari si sistematizari a cunostintelor in domeniul stomatologiei.</p>
+               
+              <p>Site-ul online <span class="red bold">Dent Group</span> are ca viziune munca in echipa, conturata sub forma unui site cu circuit inchis, ca raspuns la necesitatile de comunicare pentru medicii stomatologi din intreaga lume.</p>
+               
+              <p><span class="red bold">Dent Group</span> se concentreaza asupra formarii unei comunitati la scara cat mai larga, pentru a construi o unitate relationala de maxima receptivitate pentru toti medicii stomatoligi, ce poate fi inteleasa prin optimizarea comunicarii online intre acestia, prioritara fiind incurajarea creativitatii, enuntarea unor idei, a unor opinii originale din partea membrilor acestui site.</p>
+            </div>
+            <div id="ttshare">
+              <p>Accesand site-ul online <span class="red bold">Dent Group</span> aveti posibilitatea de a impartasi idei si opinii personale care pot fi citite si luate in considerare de ceilalti medici membrii utilizatori ai site-ului.</p>
+
+              <p>Astfel vi se ofera sansa de a posta fotografii dar si experiente placute sau neplacute din timpul operatiilor sau lucrarilor dentare, care pot fi folosite sub forma de indrumare profesionala pentru toti medicii stomatologi.</p>
+            </div>
+            <div id="ttdiscuss">
+              <p>O Comunicare eficienta este cheia increderii intre medicii stomatologi, un principiu solid in stabilirea unei unitati functionale facilitand accesul la informatii in tratamentul dentar oferit pacientilor.</p>
+
+              <p><span class="red bold">Dent Group</span> este site-ul care te ajuta sa comunici si sa stabilesti relatii de colegialitate eficiente si de durata cu medici aflati atat pe plan national cat si pe plan international.</p>
+
+              <p>World Wide Networking - un concept pe care acest site il dezvolta pentru a pune in contact practicantii acestei meserii, locul unde ideile si informatiile se concentreaza, pentru a fi "livrate" ulterior celor ce sunt interesati.</p>
+
+              <p>Site-ul are un caracter de circuit inchis putend fi accesat doar de medicii stomatologi membrii activi ai acestui site.</p>
+            </div>
+            <div id="ttmore">
+              <p><span class="red bold">Dent Group</span> incurajeaza in permanenta preocuparea pentru ridicarea continuă a pregătirii profesionale şi dăruirea la locul de muncă. Relaţiile de cooperare faciliteaza solutionarea rapida a unor probleme care apar spontan sau periodic si pot avea rezultate pozitive in planul creşterii operativităţii profesionale sau eficientizarii volumului de munca depus.</p>
+
+              <p>Veti avea acces la stiri, informatii despre furnizori si vanzari, cumparari si inchirieri de echipamente, chat, angajari, rau-platnici - totul pentru un abonament lunar in valoare de numai 7 euro.</p>
+
+              <p class="bold">Inregistrati-va acum si veti avea prima luna gratuita.</p>
+            </div>
           </div>
         </div>
       </div>
