--- a/app/views/news/_news_thumb.html.erb
+++ b/app/views/news/_news_thumb.html.erb
@@ -1,5 +1,5 @@
 <div class="news-item">
 	<a href="<%= news_path(news_thumb) %>"><h4><%= news_thumb.title %></h4></a>
-	<span class="news-item-time"><%= time_ago_in_words(news_thumb.published_at) %> ago</i></span>
+	<span class="news-item-time timestamp"><i class="fa fa-clock-o"></i> <%= time_ago_in_words(news_thumb.published_at) %></i></span>
 	<p class="news-item-summary"><%= news_thumb.summary %></p>
 </div>
