--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_location, "Offers" %>
+
 <div class="box offers-box">
 	<h1>Offers</h1>
 	<%= link_to 'Add new offer', new_offer_path %>
