--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_location, "Offers" %>
+
 <div class="box offer-box">
 	<div class="offer-title">
 		<h1><%= @offer.title %></h1>
