--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_location, "Suppliers" %>
+
 <div class="box suppliers-box">
 	<h1>Suppliers</h1>
 	<%= link_to 'Add new supplier', new_supplier_path %>
