--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -81,9 +81,10 @@
 .profile-container {
 	.stats {
 	  overflow: auto;
+	  font-size: 12px;
 	  a {
 	    float: left;
-	    padding: 0 10px;
+	    padding: 0 4px;
 	    border-left: 1px solid #ddd;
 	    color: gray;
 	    &:first-child {
