--- a/app/views/activities/_status_posted.html.erb
+++ b/app/views/activities/_status_posted.html.erb
@@ -1,6 +1,6 @@
 <% status_user = subject.user %>
 
-<div class="feed-item feed-item-status">
+<div class="feed-item feed-item-status box">
 	<%= link_to image_tag("/profile_pictures/thumbs/#{status_user.get_profile_picture}", class: 'feed-item-user-icon'), status_user %>
 	<div class="feed-item-container">
 		<h5><%= link_to status_user.full_name, status_user %></h5>
@@ -17,7 +17,13 @@
 				</div>
 			<% end %>
 		</div>
-		<span class="timestamp"><%= time_ago_in_words(subject.created_at) %> ago</span>
+		<span class="timestamp"><i class="fa fa-clock-o"></i> <%= time_ago_in_words(subject.created_at) %></span>
+
+		<% if current_user?(status_user) %>
+			&nbsp;&nbsp;<span class="timestamp"><i class="fa fa-trash-o"></i> 
+			<%= link_to "Delete", status_path(subject), method: :delete, :confirm => "Are you sure you want to delete this status?", class: "btn-remove-status text-muted" %>
+		<% end %>
+
 		<%= simple_form_for([subject, @status_comment], html: { role: "form", class: 'feed-comment-form' }) do |f| %>
 
 			<ul class="feed-item-status-comments-list">
@@ -25,23 +31,24 @@
 					<li>
 						<%= link_to image_tag("/profile_pictures/thumbs/#{comment.user.get_profile_picture}", class: 'feed-item-comment-user-icon'), comment.user %>
 						<div class="feed-item-comment-content">
-							<h5><%= link_to comment.user.full_name, comment.user %></h5>
-							<div class="feed-item-comment-body"><%= comment.message %></div>
-							<span class="timestamp"><%= time_ago_in_words(comment.created_at) %> ago </span>
+							<%= link_to comment.user.full_name, comment.user %>
+							<span class="feed-item-comment-body"><%= comment.message %></span>
+
+							<br/>
+							<span class="timestamp"><i class="fa fa-clock-o"></i> <%= time_ago_in_words(comment.created_at) %></span>
+							<% if current_user?(comment.user) %>
+								&nbsp;&nbsp;<span class="timestamp"><i class="fa fa-trash-o"></i> 
+								<%= link_to "Delete", status_status_comment_path(subject, comment), method: :delete, :confirm => "Are you sure you want to delete this comment?", class: "btn-remove-comment text-muted" %>
+								</span>
+							<% end %>
 						</div>
-						<% if current_user?(comment.user) %>
-							<%= link_to "Delete", status_status_comment_path(subject, comment), method: :delete, :confirm => "Are you sure you want to delete this comment?", class: "btn btn-danger btn-xs btn-remove-comment" %>
-						<% end %>
 					</li>
 				<% end %>
 				<li>
 					<%= image_tag("/profile_pictures/thumbs/#{current_user.get_profile_picture}", class: 'feed-item-comment-user-icon') %>
-					<%= f.input :message, :required => true, as: :string, label: false, input_html: { placeholder: "Write a comment...", class: 'comment_input form-control' } %>
+					<%= f.input_field :message, :required => true, as: :string, label: false, placeholder: "Write a comment...", class: 'comment_input form-control' %>
 				</li>
 			</ul>	
-		<% end %>
-		<% if current_user?(status_user) %>
-			<%= link_to "Delete", status_path(subject), method: :delete, :confirm => "Are you sure you want to delete this status?", class: "btn btn-danger btn-xs btn-remove-status" %>
 		<% end %>
 	</div>
 </div>
