--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_location, "Jobs" %>
+
 <div class="box jobs-box">
 	<h1>Edit job - <%= @job.title %></h1>
 	<%= simple_form_for(@job, html: { role: "form", id: 'addJobForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
