--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_location, "Jobs" %>
+
 <div class="box jobs-box">
 	<h1>Add new job</h1>
 	<%= simple_form_for(@job, url: jobs_path, html: { role: "form", id: 'addJobForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
