--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,15 +1,72 @@
-<div class="box news-box">
-	<div class="news-title">
-		<h1><%= @news.title %></h1>
-		<span class="timestamp"><%= time_ago_in_words(@news.published_at) %> ago</span>
-	</div>
-	<div class="news-links">
-		<%= link_to 'Edit', edit_news_path(@news), class: 'btn btn-primary btn-sm' %>
-	</div>
+<% content_for :page_location, "News" %>
 
-	<hr/>
+<div class="row">
+	<div class="col-sm-8">
+		<h4><a href="<%= news_path(@news) %>"><%= @news.title %></a></h4>
+		<ul class="text-muted list-inline">
+			<li><i class="fa fa-user"></i> <a href="#">Administrator</a></li>
+			<li><i class="fa fa-calendar"></i> <%= @news.published_at.to_formatted_s(:news) %></li>
+			<li><i class="fa fa-comments-o"></i> 21 comments</li>
+			<li><i class="fa fa-edit"></i> <%= link_to "Edit", edit_news_path(@news), class: "text-muted" %></li>
+		</ul>
+		<hr>
+		<p class="blog-text">
+			<%= raw(@news.body) %>
+		</p>
+	
+		<div class="new-comment">
+			<form class="form-horizontal" role="form">
+				<div class="form-group">
+					<div class="col-sm-2 hidden-xs">
+						<img src="img/face1.jpg" alt="..." class="img-responsive">
+					</div>
+					<div class="col-sm-10">
+						<textarea class="form-control" rows="3" placeholder="Leave a message..."></textarea>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-2 col-sm-10">
+						<button type="submit" class="btn btn-dark btn-sm">Post comment</button>
+					</div>
+				</div>
+			</form>
+		</div>
 
-	<div class="news-body">
-		<%= raw(@news.body) %>
-	</div>
+	  <h4>21 comments</h4>
+	  <hr>
+	  <div class="comment">
+	    <div class="media">
+	      <a class="pull-left" href="#">
+	        <img class="media-object" src="img/face2.jpg" alt="...">
+	      </a>
+	      <div class="media-body">
+	        <p><a href="profile.html">Username</a></p>
+	        <p>
+	          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur urna at neque mollis sagittis. Vivamus viverra justo in dui vulputate tincidunt in eu magna. Ut ut risus pretium, varius felis a, congue metus.
+	        </p>
+	        <ul class="text-muted list-inline">
+	          <li><i class="fa fa-clock-o"></i> 20 minutes ago</li>
+	          <li><i class="fa fa-cog"></i> <a href="#">Edit</a></li>
+	        </ul>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="comment">
+	    <div class="media">
+	      <a class="pull-left" href="#">
+	        <img class="media-object" src="img/face3.jpg" alt="...">
+	      </a>
+	      <div class="media-body">
+	        <p><a href="profile.html">Username 2</a></p>
+	        <p>
+	          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur urna at neque mollis sagittis. Vivamus viverra justo in dui vulputate tincidunt in eu magna. Ut ut risus pretium, varius felis a, congue metus.
+	        </p>
+	        <ul class="text-muted list-inline">
+	          <li><i class="fa fa-clock-o"></i> 1 hour ago</li>
+	          <li><i class="fa fa-cog"></i> <a href="#">Edit</a></li>
+	        </ul>
+	      </div>
+	    </div>
+	  </div>
+  </div>
 </div>
