--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_location, "Offers" %>
+
 <div class="box offers-box">
 	<h1>Add new offer</h1>
 	<%= simple_form_for(@offer, url: offers_path, html: { role: "form", id: 'addOfferForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
