--- a/app/views/suppliers/edit.html.erb
+++ b/app/views/suppliers/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_location, "Suppliers" %>
+
 <div class="box suppliers-box">
 	<h1>Edit supplier - <%= @supplier.name %></h1>
 	<%= simple_form_for(@supplier, html: { role: "form", id: 'editSupplierForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
