--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_location, "Suppliers" %>
+
 <div class="box cuppliers-box">
 	<h1>Add new supplier</h1>
 	<%= simple_form_for(@supplier, url: suppliers_path, html: { role: "form", id: 'addSupplierForm' }, defaults: { input_html: { class: 'form-control' } } ) do |f| %>
