--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_location, "Suppliers" %>
+
 <div class="box supplier-box">
 	<div class="supplier-name">
 		<h1><%= @supplier.name %></h1>
